# events-django-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  manage.py  migrate-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
applications/core/: admin.py  choices.py  filters.py  helpers.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
applications/tickets/: apps.py  helpers.py  models.py  serializers.py  views.py
applications/users/: serializers.py  urls.py  views.py
backend/: celery.py  settings.py  urls.py
backend/settings/: common.py  dev.py  prod.py  test.py
core/: admin.py  choices.py  filters.py  helpers.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20211025_2118.py  0002_rename_id_event_key.py  0002_userplatformchoice_auth_data.py  0003_auto_20211006_2329.py  0003_auto_20211025_2118.py  0003_rename_key_event_id.py  0004_rename_id_event_id.py  0005_eventhistory_event.py  0006_auto_20211027_1949.py  0007_auto_20211027_2059.py  0008_auto_20211028_1819.py  0009_remove_eventtemplate_event.py  0010_delete_eventtemplate.py  0011_alter_event_image.py  0012_event_location.py  0013_auto_20211030_1604.py  0014_alter_eventhistory_label.py  0015_auto_20211101_1057.py  0016_alter_followedhashtag_user.py
data/db/: postmaster.pid
drivers/: helpers.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
drivers/drivers/: BaseDriver.py  VintedDriver.py
drivers/migrations/: 0001_initial.py  0002_platform_url.py
scripts/: entrypoints.py
scripts/bash/: lint.sh  test-dev.sh  test.sh
test/: conftest.py  docker-compose.yml  run_test
tickets/: admin.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
tickets/migrations/: 0001_initial.py  0002_auto_20211029_0930.py  0003_rename_template_tickettemplate__file.py  0004_auto_20211029_1451.py
tickets/tests/: test_models.py  test_urls.py
users/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  (+1 more)
(+235 files in other folders)
